# YOLO-model-development-kit

./: .amlignore  .gitignore  .hadolint.yml  .pre-commit-config.yaml  README.md  categories_eval.json  categories_eval_baas_v11.json  categories_eval_baas_v5.json  categories_eval_baas_v5_old_dataset.json  config.yml  groupings_old_bias_analysis.json  groupings_old_bias_analysis_yolo.json  groupings_wheelchair.json  groupings_wheelchairs_bias_analysis.json  pyproject.toml  sweep_config.json  thresholds.json  train_data_augment_config.json
yolo_model_development_kit/: __init__.py
yolo_model_development_kit/create_aml_environment/: Dockerfile  create_azure_env.py
yolo_model_development_kit/inference_pipeline/: submit_inference_pipeline.py
yolo_model_development_kit/inference_pipeline/components/: run_inference.py
yolo_model_development_kit/inference_pipeline/source/: YOLO_inference.py  input_image.py  model_result.py  output_image.py
yolo_model_development_kit/model_conversion_pipeline/: submit_model_conversion_pipeline.py
yolo_model_development_kit/model_conversion_pipeline/components/: model_conversion.py
yolo_model_development_kit/performance_evaluation_pipeline/: submit_evaluation_pipeline.py
yolo_model_development_kit/performance_evaluation_pipeline/components/: __init__.py  evaluate_model.py  perform_bias_analysis.py
yolo_model_development_kit/performance_evaluation_pipeline/metrics/: __init__.py  custom_coco_evaluator.py  metrics_utils.py  per_image_stats.py  per_pixel_stats.py
yolo_model_development_kit/performance_evaluation_pipeline/source/: __init__.py  dataset_utils.py  oor_evaluation.py  plot_utils.py  run_custom_coco_eval.py  yolo_evaluation.py  yolo_to_coco.py
yolo_model_development_kit/settings/: __init__.py  settings.py  settings_schema.py
yolo_model_development_kit/tests/: test_sahi_results.py
yolo_model_development_kit/training_pipeline/: submit_training_pipeline.py
yolo_model_development_kit/training_pipeline/components/: __init__.py  sweep_model.py  train_model.py
