[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-model-development-kit"
version = "1.3.1"
description = "Project to develop a YOLO model using AzureML platform."
authors = [
    "Sebastian Davrieux <s.davrieux@amsterdam.nl>",
    "Diana Epureanu <d.epureanu@amsterdam.nl>",
    "Niek IJzerman <n.ijzerman@amsterdam.nl>",
    "Andrea Lombardo <a.lombardo@amsterdam.nl>",
    "Daan Bloembergen <d.bloembergen@amsterdam.nl>"
]
maintainers = [
    { name = "Computer Vision Team, Gemeente Amsterdam", email = "cvt@amsterdam.nl" },
]
readme = "README.md"
requires-python = ">=3.10, <=3.12"
dependencies = [
    "aml_interface@git+https://github.com/Computer-Vision-Team-Amsterdam/AML-Interface.git@feature/flexible_build_context",
    "azure-ai-ml>=1.20",
    "azure-storage-blob>=12.23",
    "cvtoolkit@git+https://github.com/Computer-Vision-Team-Amsterdam/CVToolkit.git@v2.0.4",
    "matplotlib>=3.9.0",
    "mldesigner>=0.1.0b16",
    "numpy>=1.24.2",
    "opencv-python>=4.6.0",
    "pandas>=2.0",
    "pycocotools>=2.0.8",
    "sahi>=0.11.20",
    "ultralytics>=8.3.0",
    "wandb>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.4",
    "nbstripout>=0.7.1",
    "pandas-stubs>=2.0",
    "pre-commit>=3.2.0",
    "pytest>=7.0.1",
    "pytest-cov>=4.0.0",
    "safety>=3.2.4",
]
model_export = [
    "onnxslim>=0.1.48",
    "onnxruntime-gpu>=1.20.1",
    "tensorrt-cu12>7.0.0,!=10.1.*,<10.5.0",
    "tensorrt-cu12-bindings>7.0.0,!=10.1.*,<10.5.0",
    "tensorrt-cu12-libs>7.0.0,!=10.1.*,<10.5.0",
    "ultralytics[export]>=8.3.0",
]

[tool.isort]
profile = "black"
multi_line_output = 3