[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-model-development-kit"
version = "1.4.0"
description = "Project to develop a YOLO model using AzureML platform."
authors = [
    {name = "Sebastian Davrieux", email = "s.davrieux@amsterdam.nl"},
    {name = "Diana Epureanu", email = "d.epureanu@amsterdam.nl"},
    {name = "Andrea Lombardo", email = "a.lombardo@amsterdam.nl"},
    {name = "Daan Bloembergen", email = "d.bloembergen@amsterdam.nl"},
    {name = "Niek IJzerman", email = "n.ijzerman@amsterdam.nl"},
]
maintainers = [
    { name = "Computer Vision Team, Gemeente Amsterdam", email = "cvt@amsterdam.nl" },
]
readme = "README.md"
requires-python = ">=3.10, <=3.12"
dependencies = [
    "aml_interface",
    "azure-ai-ml>=1.20",
    "azure-storage-blob>=12.23",
    "cvtoolkit",
    "matplotlib>=3.9.0",
    "mldesigner>=0.1.0b16",
    "numpy>=1.24.2",
    "opencv-python>=4.6.0",
    "pandas>=2.0",
    "pycocotools>=2.0.8",
    "sahi>=0.11.20",
    "ultralytics>=8.3.0",
    "wandb>=0.18.0",
]

[tool.uv.sources]
aml_interface = { git = "https://github.com/Computer-Vision-Team-Amsterdam/AML-Interface.git", branch = "feature/Updating_logs_library" }
cvtoolkit = { git = "https://github.com/Computer-Vision-Team-Amsterdam/CVToolkit.git", branch = "fix/Package_version" }

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.4",
    "nbstripout>=0.7.1",
    "pandas-stubs>=2.0",
    "pre-commit>=3.2.0",
    "pytest>=7.0.1",
    "pytest-cov>=4.0.0",
    "safety>=3.2.4",
]
model_export = [
    "onnxslim>=0.1.48",
    "onnxruntime-gpu>=1.20.1",
    "tensorrt-cu12>7.0.0,!=10.1.*,<10.5.0",
    "tensorrt-cu12-bindings>7.0.0,!=10.1.*,<10.5.0",
    "tensorrt-cu12-libs>7.0.0,!=10.1.*,<10.5.0",
    "ultralytics[export]>=8.3.0",
]

[tool.isort]
profile = "black"
multi_line_output = 3